# my_timer

./: .gitignore  README.md  pyproject.toml
src/my_timer/: Pomodoro.py  Session.py  SoundPlayer.py  Task.py  TaskState.py  TimeFormat.py  Timer.py  TimerState.py  main.py
tests/: pomodoro_test.py  task_test.py  timeformat_test.py  timer_test.py
