[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cool-cli-timer"
version = "0.0.1"
authors = [
  {name = "Felipe Teixeira", email = "felipeteixeira2023@gmail.com"},
  ]
readme="README.md"
description = "A simple CLI timer for tasks in pomodoro style"
keywords= ["timer", "pomodoro", "study"]
license = "MIT"

[project.urls]
Repository = "https://github.com/FelipeT1/my_timer"

